fixed crucial vulnerability

--- a/report/report.tex
+++ b/report/report.tex
@@ -151,7 +151,7 @@ features (server push) or other popular applications. Network administrators
 are unlikely to block those ports.
 
 UDP port 443 is used for video calls. In contrast, voice-only calls are done
-using TCP, using one of the aforementionde ports.
+using TCP, using one of the aforementioned ports.
 
 The downloading of stickers is done over TCP port 80 (plain HTTP). Stickers in
 imo are large, animated emoticons. Anyone observing the network traffic can
